introducing /api/v1/discover/search endpoint
